@@ -19,6 +19,9 @@ base dc=example,dc=org
 # The LDAP version to use. Default is 3 if supported by client library.
 #ldap_version 3
 
+# Enable SASL and specify mechanism to use (currently supported: GSSAPI).
+#sasl GSSAPI
+
 # The distinguished name to bind to the server with.
 # Default is to bind anonymously.
 #binddn cn=proxyuser,dc=example,dc=org
